--- a/styles/globals.css
+++ b/styles/globals.css
@@ -27,7 +27,7 @@ html {
 
 body {
     height: auto;
-    margin: 0 10px;
+    margin: 0;
     min-width: 340px;
     display: flex;
     flex-wrap: wrap;
@@ -43,6 +43,7 @@ body {
 
 div {
     height: auto;
+    width: 100%;
 }
 
 .container {
@@ -53,8 +54,8 @@ div {
 
 img {
     border-style: groove;
+    border-radius: 20px;
     border-color: #EDF2F4;
-    border-radius: 50px;
 }
 
 img:hover {
@@ -91,13 +92,10 @@ a {
 
 header {
     width: 100%;
-    height: 160px;
-    margin-top: 10px;
-    margin-bottom: 20px;
-    border-color: #EDF2F4;
-    border-style: groove;
-    border-radius: 10px;
-    background-color: #8D99AE;
+    background-color: #2B2D42;
+    height: 170px;
+    padding: 0 5px;
+    border-radius: 20px;
     filter: drop-shadow(5px 10px 8px rgba(0, 0, 0, 0.5));
 }
 
@@ -105,22 +103,12 @@ header {
     display: flex;
     align-items: center;
     height: inherit;
-    justify-content: space-evenly;
 }
 
 
 .head img {
-    display: block;
     width: 140px;
-}
-
-@media (max-width: 600px) {
-    .head:has(input:checked) {
-        img {
-            display: none;
-        }
-
-    }
+    display: block;
 }
 
 .head button {
@@ -131,23 +119,26 @@ header {
 }
 
 .navigation {
-    padding: 5px;
     height: inherit;
     display: flex;
     align-items: center;
+    width: max-content;
 }
 
-.navigation:has(:not(input:checked))::after {
-    width: min-content;
-    transition: width var(--animation-timing);
-}
+.navigation ul{
+    display: none;
+} 
 
-.navigation:has(input:checked) {
+.hamburgerDiv {
+    position: relative;
+    top: 0;
+    right: 0;
+    height: inherit;
     width: auto;
+}
 
-    .sidebar {
-        opacity: 1;
-    }
+.hamburgerDiv:has(input:checked){
+    position: relative;
 }
 
 .hamburger-menu {
@@ -158,9 +149,11 @@ header {
     width: max-content;
     position: absolute;
     top: var(--hamburger-margin);
-    left: var(--hamburger-margin);
+    right: 5px;
     z-index: 2;
     cursor: pointer;
+    filter: drop-shadow(5px 10px 8px rgba(0, 0, 0, 0.5));
+
 }
 
 .hamburger-menu::before,
@@ -169,12 +162,10 @@ header {
     content: "";
     width: var(--bar-width);
     height: var(--bar-height);
-    background-color: var(--background2);
+    background-color: var(--background);
     border-radius: var(--border-radius);
     transform-origin: left center;
-    transition: opacity var(--animation-timing), width var(--animation-timing),
-        rotate var(--animation-timing), translate var(--animation-timing),
-        background-color var(--animation-timing);
+    transition: all var(--animation-timing);
 }
 
 .hamburger-menu input {
@@ -199,7 +190,7 @@ header {
 
 .hamburger-menu:has(input:checked) {
     --foreground: black;
-    --background: var(--background);
+    --background: var(--foreground);
 }
 
 .hamburger-menu input:checked {
@@ -215,36 +206,41 @@ header {
 }
 
 .sidebar {
-    transition: translate var(--animation-timing);
-    translate: -300%;
-
+    transition: all var(--animation-timing);
+    position: absolute;
+    right: 0;
+    translate: 300%;
     background-color: var(--background);
     color: var(--background);
     max-width: 10rem;
-    height: auto;
+    height: inherit;
+    filter: drop-shadow(5px 10px 8px rgba(0, 0, 0, 0.5));
+
+}
+
+.sidebar a {
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    filter: drop-shadow(5px 10px 8px rgba(0, 0, 0, 0.5));
+
 }
 
 .hamburger-menu:has(input:checked)+.sidebar {
     translate: 0;
+    position: relative;
+    display: grid;
+    justify-items: center;
+    height: inherit;
+    padding-right: var(--bar-width);
+    border-radius: 20px;
 }
 
 nav {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    flex-wrap: wrap;
+    display: grid;
     filter: drop-shadow(5px 10px 8px rgba(0, 0, 0, 0.5));
+    align-items: center;
 }
-
-nav a {
-    margin: 5px;
-    text-align: center;
-}
-
-.navigation ul {
-    display: none;
-}
-
 
 .header-buttons {
     display: grid;
@@ -258,11 +254,11 @@ nav a {
 }
 
 @media(min-width: 600px) {
-
     header {
-        position: sticky;
-        top: 10px;
-        z-index: 1;
+        position: sticky; 
+        z-index: 2;
+        top: 5px;
+        width: 100%;
     }
 
 
