--- a/styles/globals.css
+++ b/styles/globals.css
@@ -92,8 +92,9 @@ a {
 
 header {
     width: 100%;
+    min-width: 360px;
     background-color: #2B2D42;
-    height: 170px;
+    height: 200px;
     padding: 0 5px;
     border-radius: 20px;
     filter: drop-shadow(5px 10px 8px rgba(0, 0, 0, 0.5));
@@ -103,15 +104,10 @@ header {
     display: flex;
     align-items: center;
     height: inherit;
+    width: 100%;
 }
 
-
-.head img {
-    width: 140px;
-    display: block;
-}
-
-.head button {
+.navigation button {
     height: 30px;
     font-weight: bold;
     font-size: 13px;
@@ -119,26 +115,32 @@ header {
 }
 
 .navigation {
-    height: inherit;
     display: flex;
     align-items: center;
-    width: max-content;
+    height: inherit;
+    width: 100%;
+    justify-content: space-evenly;
 }
 
-.navigation ul{
+.navigation img {
+    width: 140px;
+}
+
+.logo {
+    margin-top: 40px;
+}
+
+.navigation ul {
     display: none;
-} 
+}
 
 .hamburgerDiv {
-    position: relative;
+    position: absolute;
     top: 0;
-    right: 0;
-    height: inherit;
-    width: auto;
-}
-
-.hamburgerDiv:has(input:checked){
-    position: relative;
+    left: 0;
+    height: 60px;
+    width: 100%;
+    min-width: 360px;
 }
 
 .hamburger-menu {
@@ -146,10 +148,10 @@ header {
     display: flex;
     flex-direction: column;
     gap: var(--hamburger-gap);
-    width: max-content;
+    width: auto;
     position: absolute;
     top: var(--hamburger-margin);
-    right: 5px;
+    left: 5px;
     z-index: 2;
     cursor: pointer;
     filter: drop-shadow(5px 10px 8px rgba(0, 0, 0, 0.5));
@@ -212,7 +214,9 @@ header {
     translate: 300%;
     background-color: var(--background);
     color: var(--background);
-    max-width: 10rem;
+    padding-left: var(--bar-width);
+    padding-right: 5px;
+    max-width: inherit;
     height: inherit;
     filter: drop-shadow(5px 10px 8px rgba(0, 0, 0, 0.5));
 
@@ -222,8 +226,9 @@ header {
     display: flex;
     justify-content: center;
     text-align: center;
+    height: inherit;
+    margin: 0 5px;
     filter: drop-shadow(5px 10px 8px rgba(0, 0, 0, 0.5));
-
 }
 
 .hamburger-menu:has(input:checked)+.sidebar {
@@ -232,35 +237,40 @@ header {
     display: grid;
     justify-items: center;
     height: inherit;
-    padding-right: var(--bar-width);
+    width: inherit;
     border-radius: 20px;
 }
 
 nav {
-    display: grid;
-    filter: drop-shadow(5px 10px 8px rgba(0, 0, 0, 0.5));
+    display: inline-flex;
     align-items: center;
+    justify-content: space-between;
+    width: inherit;
+    filter: drop-shadow(5px 10px 8px rgba(0, 0, 0, 0.5));
 }
 
 .header-buttons {
+    width: auto;
+    padding-top: 40px;
     display: grid;
     justify-items: center;
     height: inherit;
     align-content: center;
 }
 
-.header-buttons button {
-    margin: 5px;
-}
 
-@media(min-width: 600px) {
+@media (min-width: 900px) {
     header {
-        position: sticky; 
+        position: sticky;
         z-index: 2;
         top: 5px;
         width: 100%;
+        height: 170px;
     }
 
+    .hamburgerDiv {
+        display: none;
+    }
 
     .hamburger-menu {
         display: none;
@@ -271,8 +281,14 @@ nav {
     }
 
     .navigation {
-        width: auto;
-        display: contents;
+        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: space-evenly;
+    }
+
+    .logo {
+        margin: 0;
     }
 
     .navigation img {
@@ -280,18 +296,20 @@ nav {
     }
 
     .navigation ul {
-        margin: 0 15px;
-        width: min-content;
+        margin: 0;
+        width: -webkit-fill-available;
         padding-left: 0;
         list-style-type: none;
         display: flex;
-        flex-wrap: wrap;
+        justify-items: center;
     }
 
     .navigation ul li {
-        width: 100%;
+        margin: 0 5px;
+        width: inherit;
         text-align: center;
         white-space: nowrap;
+        font-size: medium;
     }
 
     .navigation ul li:hover {
@@ -305,21 +323,127 @@ nav {
         font-family: 'Roboto', sans-serif;
         font-style: normal;
         font-weight: normal;
-        font-size: 16px;
-        line-height: 16px;
         filter: drop-shadow(5px 10px 8px rgba(0, 0, 0, 0.5));
     }
 
     .header-buttons {
         display: flex;
+        padding: 0;
+        width: max-content;
         align-items: center;
-        justify-content: space-around;
+        justify-content: center;
     }
 
+    .navigation button {
+        height: 50px;
+        font-weight: bold;
+        font-size: 16px;
+        white-space: nowrap;
+        border-style: groove;
+        border-radius: 100px;
+        padding: 0px 24px;
+    }
+}
+
+.header-buttons button {
+    margin: 5px;
+}
+
+@media(min-width: 600px) and (max-width: 900px) {
+    header {
+        position: sticky;
+        z-index: 2;
+        top: 5px;
+        width: 100%;
+        height: 170px;
+    }
+
+    .hamburgerDiv {
+        display: none;
+    }
+
+    .hamburger-menu {
+        display: none;
+    }
+
+    aside {
+        display: none;
+    }
+
+    .navigation {
+        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: space-evenly;
+    }
+
+    .logo {
+        margin: 0;
+    }
+
+    .navigation img {
+        width: 160px;
+    }
+
+    .navigation ul {
+        margin: 0;
+        width: -webkit-fill-available;
+        padding-left: 0;
+        list-style-type: none;
+        display: flex;
+        flex-wrap: wrap;
+        justify-items: center;
+    }
+
+    .navigation ul li {
+        margin: 0 5px;
+        width: inherit;
+        text-align: center;
+        white-space: nowrap;
+        font-size: larger;
+    }
+
+    .navigation ul li:hover {
+        transform: scale(1.05);
+    }
+
+    .navigation ul a {
+        width: 87px;
+        text-decoration: none;
+        color: #EDF2F4;
+        font-family: 'Roboto', sans-serif;
+        font-style: normal;
+        font-weight: normal;
+        filter: drop-shadow(5px 10px 8px rgba(0, 0, 0, 0.5));
+    }
+
+    .header-buttons {
+        display: flex;
+        padding: 0;
+        width: max-content;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .navigation button {
+        height: 40px;
+        font-weight: bold;
+        font-size: 16px;
+        white-space: nowrap;
+        border-style: groove;
+        border-radius: 100px;
+    }
+}
+
+@media (max-width: 980px) {
+
     .head button {
-        height: 30px;
+        height: 40px;
         font-weight: bold;
         font-size: 13px;
+        white-space: nowrap;
+        border-style: groove;
+        border-radius: 100px;
         padding: 0px 15px;
     }
 }
@@ -335,7 +459,8 @@ nav {
 
 @media (min-width: 600px) {
     .profile {
-        height: inherit;
+        height: auto;
+        width: auto;
     }
 }
 
